force-app/main/default/objects/Program/fields/nepa_agency_performance_tier__c.field-meta.xml
<CustomField><fullName>nepa_agency_performance_tier__c</fullName>
        <description>Performance tier for the lead agency based on median NOI-to-DEIS duration from CEQ EIS Timeline data 2010–2024. Set by NEPA_Agency_Tier_Setter flow when nepa_record_owner_agency__c changes. Fast_and_Defensible = ≤18mo median; Slow_Scoping_Bottleneck = 19–42mo; Legally_Vulnerable = &gt;30mo combined with high litigation loss rate.</description>
        <inlineHelpText>Agency EIS scoping performance classification. Fast agencies reduce litigation exposure; Legally Vulnerable agencies should trigger enhanced record completeness review.</inlineHelpText>
        <label>Agency Performance Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fast_and_Defensible</fullName>
                    <label>Fast and Defensible</label>
                </value>
                <value>
                    <fullName>Slow_Scoping_Bottleneck</fullName>
                    <label>Slow Scoping Bottleneck</label>
                </value>
                <value>
                    <fullName>Legally_Vulnerable</fullName>
                    <label>Legally Vulnerable</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>