force-app/main/default/objects/Program/fields/nepa_extraordinary_circumstances__c.field-meta.xml
<CustomField><fullName>nepa_extraordinary_circumstances__c</fullName>
        <description>Set to true by NEPA_GIS_Proximity_IP when a proximity match triggers an extraordinary circumstances keyword (e.g., WETLANDS, FLOODPLAIN, critical habitat) as defined in NEPA_GIS_Layer__mdt. When true, the CE Screener will not recommend a CE pathway — the project requires at minimum an EA.</description>
        <inlineHelpText>True if GIS proximity check found extraordinary circumstances that preclude a CE determination.</inlineHelpText>
        <label>Extraordinary Circumstances (GIS)</label>
        <defaultValue>false</defaultValue>
        <type>Checkbox</type>
    </CustomField>