force-app/main/default/objects/Program/fields/nepa_gis_last_checked__c.field-meta.xml
<CustomField><fullName>nepa_gis_last_checked__c</fullName>
        <description>Timestamp of the last successful GIS proximity check by NEPA_GIS_Proximity_IP. Null if the check has never run. Used to detect stale proximity data when coordinates are updated.</description>
        <inlineHelpText>Last time the GIS proximity check ran for this project location.</inlineHelpText>
        <label>GIS Last Checked</label>
        <type>DateTime</type>
    </CustomField>